# dump-tools

./: CMakeLists.txt  README.md
archive/: README.txt
archive/video_dump/: .gitignore  video_dump.pro
archive/video_dump/src/: GuiPlayer.cpp  GuiPlayer.hpp  VlcInstance.hpp  VlcMedia.hpp  VlcPlayer.hpp  main.cpp  player.ui  render.cpp  render.hpp
archive/video_dump/src/resources/: resources.qrc
archive/vlcdump_plugin/: ImageEx.cpp  ImageEx.hpp  color.h  image.cpp  image.h  project.pro  vlcdump.cpp  vlcdump.h
compressor/: CMakeLists.txt  DumpPlane.cpp  DumpPlane.hpp  README.md  compressor.pro  main.cpp
kde-dump-thumbnailer/: CMakeLists.txt  dump.desktop  dump.xml  dumpcreator.cpp  dumpcreator.hpp
qt5-dump-plugin/: CMakeLists.txt  Dump.cpp  Dump.hpp  README.md  dump.json  project.pro  vlcdump.cpp  vlcdump.hpp
shell-dump-extension/: .gitignore  CMakeLists.txt  ClassFactory.cpp  DumpHandler.cpp  DumpHandler.h  DumpPlane.cpp  DumpPlane.hpp  README.md  Source.def  dllmain.cpp  shell-dump-extension.sln  shell-dump-extension.vcxproj
shell-dump-extension/zlib/lib/: zlibstatic.lib
videodumper/: CMakeLists.txt  README.md  video_dumper.pro
videodumper/src/: main.cpp
